# QuizApp

./: Dockerfile  FBLAPresentation.pptx  LICENSE  Pipfile  README.md  README_ESPANOL.md  README_FRANCOIS.md  autoadd.sh  docker-compose.yml  gitscript.py  manage.py  mydatabase  shell
FblaQuiz/: asgi.py  settings.py  urls.py  wsgi.py
FblaQuiz-GUI/: package-lock.json  package.json
FblaQuiz-GUI/src-tauri/: Cargo.toml  tauri.conf.json
FblaQuiz-GUI/src-tauri/assets/: index.html
FblaQuiz-GUI/src-tauri/src/: main.rs
FblaQuiz-cli/: Cargo.toml
FblaQuiz-druid/: Cargo.toml
FblaQuiz-druid/src/: core.rs  main.rs  ui.rs
FblaQuiz-gui/: Cargo.toml
FblaQuiz-gui/src/: #Test.glade#  Test.glade  lib.rs  main.rs
FblaQuiz-gui/src/glade_files/: Test.glade~
api/: serializers.py  tests.py  urls.py  views.py
quiz/: admin.py  flycheck_tests.py  forms.py  models.py  tests.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_quiz_created.py  0002_quiz_slug.py  0003_auto_20201208_0138.py  0003_auto_20201212_0203.py  0004_auto_20201212_0230.py  0004_quiz_slug.py  0005_auto_20201210_0142.py  0005_auto_20201213_0118.py  0006_auto_20201210_0142.py  0006_auto_20201216_0137.py  0007_quiz_playid.py  0007_remove_quiz_slug.py  0008_auto_20210211_0129.py  0009_auto_20210211_0132.py  0010_auto_20210212_2326.py
quiz/templates/: base.html
quiz/templates/quiz/: create.html  pdf.html  (+5 more)
quiz/templatetags/: quiz_tags.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20201204_0305.py
users/templates/: base.html
(+3 files in other folders)
